--- a/.github/workflows/generated-linux-xenial-py3.7-clang7-asan.yml
+++ b/.github/workflows/generated-linux-xenial-py3.7-clang7-asan.yml
@@ -162,7 +162,7 @@ jobs:
       - name: Parse ref
         shell: bash
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: ./.github/scripts/parse_ref.py
       - name: Build
         env:
           BRANCH: ${{ steps.parse-ref.outputs.branch }}
@@ -349,7 +349,7 @@ jobs:
       - name: Parse ref
         shell: bash
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: ./.github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -596,7 +596,7 @@ jobs:
       - name: Parse ref
         shell: bash
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: ./.github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -843,7 +843,7 @@ jobs:
       - name: Parse ref
         shell: bash
         id: parse-ref
-        run: python .github/scripts/parse_ref.py
+        run: ./.github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
