--- a/.circleci/docker/requirements-ci.txt
+++ b/.circleci/docker/requirements-ci.txt
@@ -49,6 +49,7 @@ PyYAML
 requests
 rich
 #rich==10.9.0
+scikit-image
 scikit-learn
 #scikit-learn==0.20.3
 scipy
@@ -56,6 +57,7 @@ scipy
 six
 #six==1.16.0
 tabulate
+tb-nightly
 torch
 torchvision
 typing-extensions
