--- a/test/mobile/lightweight_dispatch/CMakeLists.txt
+++ b/test/mobile/lightweight_dispatch/CMakeLists.txt
@@ -12,12 +12,9 @@ target_include_directories(test_codegen_unboxing PRIVATE ${ATen_CPU_INCLUDE})
 
 target_compile_definitions(test_codegen_unboxing PRIVATE USE_GTEST)
 
-set(TEST_UNBOXING_DEPENDENCIES torch gtest gtest_main ${TORCH_LIBRARIES})
+set(TEST_UNBOXING_DEPENDENCIES torch gtest)
 
-target_link_libraries(test_codegen_unboxing
-  -Wl,-s
-  -Wl,--gc-sections
-  -Wl,--whole-archive
+target_link_libraries(test_codegen_unboxing PRIVATE
   ${TEST_UNBOXING_DEPENDENCIES}
 )
 
